<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_page_layout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:padding="16dp"
        android:id="@+id/textView_header_id"
        style="@style/MainPageThemeHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pizza_header"
        android:textAlignment="center"
        android:textStyle="bold" />

    <TextView
        android:padding="16dp"
        android:id="@+id/textView_body_id"
        style="@style/MainPageThemeBody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pizza_body"
        android:textAlignment="viewStart" />

    <ImageView
        android:id="@+id/imageView_logo_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/pizza_logo"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/logo" />

</LinearLayout>