<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pizza_size_layout_id"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".PizzaSizeActivity">

    <RadioGroup
        android:id="@+id/radio_group_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioButton
            android:id="@+id/rButton_small_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableEnd="@drawable/size_small"
            android:gravity="center|center_vertical"
            android:text="@string/small_size"
            android:visibility="visible" />

        <RadioButton
            android:id="@+id/rButton_medium_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableEnd="@drawable/size_medium"
            android:gravity="center|center_vertical"
            android:text="@string/medium_size" />

        <RadioButton
            android:id="@+id/rButton_large_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableEnd="@drawable/size_large"
            android:gravity="center|center_vertical"
            android:text="@string/large_size" />

        <RadioButton
            android:id="@+id/rButton_extraLarge_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:drawableEnd="@drawable/size_extra_large"
            android:gravity="center|center_vertical"
            android:text="@string/extra_large_size" />

    </RadioGroup>

</LinearLayout>
